force-app/main/default/objects/Channel_Relationship__c/Channel_Relationship__c.object-meta.xml
<CustomObject>
    <description>Used to related channel partners with opportunities (and vice versa).</description>
    <label>Channel Relationship</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Channel Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Channel Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>