force-app/main/default/objects/Channel_Relationship__c/fields/Calculate_Rebate_From__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Rebate_From__c</fullName>
    <description>GTMS-26107 &amp; GTMS-26124: Created as part of Partners H1 project to the formula for Rebate calculation based on the Partner Account. This field is mapped in Before insert flow.</description>
    <label>Calculate Rebate From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List Amount</fullName>
            </value>
            <value>
                <fullName>Net Amount</fullName>
                <default>true</default>
                <label>Net Amount</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>