force-app/main/default/objects/Channel_Relationship__c/fields/CAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>CAM_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>