force-app/main/default/objects/Channel_Relationship__c/fields/Categorization_Reason__c.field-meta.xml
<CustomField>
    <fullName>Categorization_Reason__c</fullName>
    <label>Categorization Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>