force-app/main/default/objects/Channel_Relationship__c/fields/Channel_Partner_Representative__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Representative__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Channel_Partner__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Channel Relationships</relationshipLabel>
    <relationshipName>Channel_Relationship_Representative</relationshipName>
    <type>Lookup</type>
</CustomField>