force-app/main/default/objects/Channel_Relationship__c/fields/Channel_Partner_User_lr__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_User_lr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>