force-app/main/default/objects/Channel_Relationship__c/fields/CR_Status__c.field-meta.xml
<CustomField>
    <fullName>CR_Status__c</fullName>
    <label>CR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Pending AE Renewal</fullName>
            </value>
            <value>
                <fullName>Renewed by AE</fullName>
            </value>
            <value>
                <fullName>Denied at Close</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>AE Confirmed</fullName>
            </value>
            <value>
                <fullName>AE Rejected</fullName>
            </value>
            <value>
                <fullName>Voided</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>