force-app/main/default/objects/Channel_Relationship__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added for GTMS-16044</description>
    <label>Customer Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Relationships (Customer Account Name)</relationshipLabel>
    <relationshipName>Channel_Relationships3</relationshipName>
    <type>Lookup</type>
</CustomField>