force-app/main/default/objects/Channel_Relationship__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added for GTMS-16044</description>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Channel Relationships (Customer Contact)</relationshipLabel>
    <relationshipName>Channel_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>