force-app/main/default/objects/Channel_Relationship__c/fields/Eligible_For_Payout__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Payout__c</fullName>
    <description>GTMS-26112: Created as part of Partners H1 Project.</description>
    <label>Eligible For Payout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>