force-app/main/default/objects/Channel_Relationship__c/fields/Frequency_of_Subsidy_Payment__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Subsidy_Payment__c</fullName>
    <description>added for GTMS-16044</description>
    <label>Frequency of Subsidy Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>