force-app/main/default/objects/Channel_Relationship__c/fields/Influence_Payout_Model__c.field-meta.xml
<CustomField>
    <fullName>Influence_Payout_Model__c</fullName>
    <description>Update the help text as per Aarons comment in Partner Proj Working channel</description>
    <inlineHelpText>Approved values: Percentage or Flat Rate</inlineHelpText>
    <label>Influence Payout Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>