force-app/main/default/objects/Channel_Relationship__c/fields/Influence_Payout_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Influence_Payout_Percentage__c</fullName>
    <label>Influence Payout Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>