force-app/main/default/objects/Channel_Relationship__c/fields/Is_Deal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Is_Deal_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>added for GTMS-13489</description>
    <label>Is Deal Registration</label>
    <type>Checkbox</type>
</CustomField>