force-app/main/default/objects/Channel_Relationship__c/fields/Is_First_Purchase_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Purchase_Oppty__c</fullName>
    <description>GTMS-28672: Created to store if the oppty is a first purchase oppty.</description>
    <formula>Opportunity__r.First_Purchase__c</formula>
    <label>Is First Purchase Oppty</label>
    <type>Checkbox</type>
</CustomField>