force-app/main/default/objects/Channel_Relationship__c/fields/Minimum_Customer_Discount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Customer_Discount__c</fullName>
    <label>Minimum Customer Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>