force-app/main/default/objects/Channel_Relationship__c/fields/Number_of_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units__c</fullName>
    <description>GTMS-16042</description>
    <label>Number of units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>