force-app/main/default/objects/Channel_Relationship__c/fields/Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency__c</fullName>
    <description>Created as part of Partners H1 project to store the Opportunity currency</description>
    <formula>TEXT(Opportunity__r.CurrencyIsoCode)</formula>
    <label>Opportunity Currency</label>
    <type>Text</type>
</CustomField>