force-app/main/default/objects/Channel_Relationship__c/fields/Opportunity_Currency_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Currency_Conversion_Rate__c</fullName>
    <description>Created as part of partners H1 project to store the Dated Exchange conversion rate of Opportunity currency</description>
    <label>Opportunity Currency Conversion Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>