force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Contact__c.field-meta.xml
<CustomField>
    <fullName>Partner_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>added for GTMS-16044</description>
    <label>Partner Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Channel Relationships (Partner Contact)</relationshipLabel>
    <relationshipName>Channel_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>