force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Currency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Currency__c</fullName>
    <description>Created as part of partners H1 project to store the Partner account currency</description>
    <formula>TEXT(Channel_Partner__r.CurrencyIsoCode)</formula>
    <label>Partner Currency</label>
    <type>Text</type>
</CustomField>