force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Deal_14_Day_Auto_Tag__c.field-meta.xml
<CustomField>
    <fullName>Partner_Deal_14_Day_Auto_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Deal 14 Day Auto-Tag</label>
    <type>Checkbox</type>
</CustomField>