force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Discount__c.field-meta.xml
<CustomField>
    <fullName>Partner_Discount__c</fullName>
    <description>GTMS-6421: Partner Discount information that is populated on the related partner account</description>
    <label>Partner Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>