force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Enrollment</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>Partner_Program_Enrollment__c.Partner_Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Channel_Partner__c</valueField>
        </filterItems>
        <filterItems>
            <field>Partner_Program_Enrollment__c.Member_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <filterItems>
            <field>Partner_Program_Enrollment__c.Member_Status__c</field>
            <operation>equals</operation>
            <value>Pilot</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Partner_Program_Enrollment__c</referenceTo>
    <relationshipLabel>Channel Relationships</relationshipLabel>
    <relationshipName>Channel_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>