force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Interaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Interaction_Type__c</fullName>
    <label>Partner Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partner Sourced</fullName>
            </value>
            <value>
                <fullName>Partner Influenced</fullName>
                <default>true</default>
                <label>Partner Influenced</label>
            </value>
            <value>
                <fullName>Partner Initiated</fullName>
            </value>
            <value>
                <fullName>Partner Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>