force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Payout__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payout__c</fullName>
    <description>GTMS-26117: Created as part of Partners H1 project to store payout amount for Source Partner or Influence Partner</description>
    <label>Partner Payout</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>