force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Payout_In_Opportunity_Currency__c.field-meta.xml
<CustomField>
    <fullName>Partner_Payout_In_Opportunity_Currency__c</fullName>
    <description>Created as part of Partners H1 project to store the Partner payout value of Opportunity currency</description>
    <label>Partner Payout In Opportunity Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>