force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Program</label>
    <referenceTo>Partner_Program__c</referenceTo>
    <relationshipLabel>Channel Relationships</relationshipLabel>
    <relationshipName>Channel_Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>