force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Program_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Program Enrollment</label>
    <referenceTo>Partner_Program_Enrollment__c</referenceTo>
    <relationshipLabel>Channel Relationships (Partner Program Enrollment)</relationshipLabel>
    <relationshipName>Channel_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>