force-app/main/default/objects/Channel_Relationship__c/fields/Partner_Sourced_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sourced_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-26114: Created as part of Partners H1 project</description>
    <label>Partner Sourced Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Channel Relationships (Partner Sourced Opportunity)</relationshipLabel>
    <relationshipName>Channel_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>