force-app/main/default/objects/Channel_Relationship__c/fields/Partner_type__c.field-meta.xml
<CustomField>
    <fullName>Partner_type__c</fullName>
    <description>GTMS-6421, Lookup to &quot;Partner Type&quot; field on Channel Partner Account record.</description>
    <formula>TEXT(Channel_Partner__r.Partner_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Team Alignment</label>
    <type>Text</type>
</CustomField>