force-app/main/default/objects/Channel_Relationship__c/fields/Primary_Record__c.field-meta.xml
<CustomField>
    <fullName>Primary_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Record</label>
    <type>Checkbox</type>
</CustomField>