force-app/main/default/objects/Channel_Relationship__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>GTMS-16042</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CM33</fullName>
            </value>
            <value>
                <fullName>CM34</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>