force-app/main/default/objects/Channel_Relationship__c/fields/Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Type__c</fullName>
    <description>GTMS-6421</description>
    <label>Sales Program Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid Referral</fullName>
            </value>
            <value>
                <fullName>Premium Discount</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Safety Program</fullName>
            </value>
            <value>
                <fullName>Subsidy</fullName>
            </value>
            <value>
                <fullName>Unpaid Referral</fullName>
            </value>
            <value>
                <fullName>Whitelabel</fullName>
            </value>
            <value>
                <fullName>Teaming</fullName>
            </value>
            <value>
                <fullName>Teaming Partner</fullName>
                <isActive>false</isActive>
                <label>Teaming Partner</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>