force-app/main/default/objects/Channel_Relationship__c/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <description>added for GTMS-28941</description>
    <label>2T Reseller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>