force-app/main/default/objects/Channel_Relationship__c/fields/Samsara_Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Samsara_Product_SKU__c</fullName>
    <description>added for GTMS-16044</description>
    <label>Samsara Product SKU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CM33</fullName>
            </value>
            <value>
                <fullName>CM34</fullName>
            </value>
            <value>
                <fullName>CM31</fullName>
                <isActive>false</isActive>
                <label>CM31</label>
            </value>
            <value>
                <fullName>CM32</fullName>
                <isActive>false</isActive>
                <label>CM32</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>