force-app/main/default/objects/Channel_Relationship__c/fields/Service_Amount_currency__c.field-meta.xml
<CustomField>
    <fullName>Service_Amount_currency__c</fullName>
    <label>Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>