force-app/main/default/objects/Channel_Relationship__c/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Channel Relationships (Source Opportunity)</relationshipLabel>
    <relationshipName>Channel_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>