force-app/main/default/objects/Channel_Relationship__c/fields/Sourced_Payout_Fee__c.field-meta.xml
<CustomField>
    <fullName>Sourced_Payout_Fee__c</fullName>
    <label>Sourced Payout Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>