force-app/main/default/objects/Channel_Relationship__c/fields/Subsidy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Amount__c</fullName>
    <description>added for GTMS-16044</description>
    <label>Subsidy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>