force-app/main/default/objects/Channel_Relationship__c/fields/System_Integrator_new__c.field-meta.xml
<CustomField>
    <fullName>System_Integrator_new__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Integrator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Relationships (System Integrator)</relationshipLabel>
    <relationshipName>Channel_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>