force-app/main/default/objects/Channel_Relationship__c/fields/Teaming_Partner__c.field-meta.xml
<CustomField>
    <fullName>Teaming_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GTMS-6421</description>
    <label>Teaming Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Channel Relationships (Teaming Partner)</relationshipLabel>
    <relationshipName>Channel_Relationships2</relationshipName>
    <type>Lookup</type>
</CustomField>