force-app/main/default/objects/Channel_Relationship__c/validationRules/Check_Denial_Reason_Denied_at_Closing.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Denial_Reason_Denied_at_Closing</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(CR_Status__c, &quot;Denied at Closing&quot;), ISBLANK(Rejection_Reason__c))</errorConditionFormula>
    <errorMessage>Require denial reason when partner is denied</errorMessage>
</ValidationRule>