force-app/main/default/objects/Channel_Relationship__c/validationRules/Ensure_only_authorized_users_can_approve.validationRule-meta.xml
<ValidationRule>
    <fullName>Ensure_only_authorized_users_can_approve</fullName>
    <active>false</active>
    <errorConditionFormula>AND(    OR(        ISPICKVAL(CR_Status__c, &quot;Denied at Close&quot;),        ISPICKVAL(CR_Status__c, &quot;Approved&quot;)    ),     $Profile.Name != &quot;System Administrator&quot;,     $Profile.Name != &quot;Samsara Channel Account Managers&quot;)</errorConditionFormula>
    <errorMessage>You are not authorized to approve or deny</errorMessage>
</ValidationRule>